add query and command bus abstractions

--- a/PL.Authorization.Infrastructure/PL.Authorization.Infrastructure.csproj
+++ b/PL.Authorization.Infrastructure/PL.Authorization.Infrastructure.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\src\Authorization\PL.Authorization\PL.Authorization.Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Configuration\Pipeline\" />
+  </ItemGroup>
+
 </Project>
