--- a/PL.Authorization.Infrastructure/PL.Authorization.Infrastructure.csproj
+++ b/PL.Authorization.Infrastructure/PL.Authorization.Infrastructure.csproj
@@ -9,7 +9,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Configuration\Pipeline\" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="MediatR.Extensions.Autofac.DependencyInjection" Version="5.3.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
   </ItemGroup>
 
 </Project>
