--- a/PL.Authorization.Infrastructure/PL.Authorization.Infrastructure.csproj
+++ b/PL.Authorization.Infrastructure/PL.Authorization.Infrastructure.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="MediatR.Extensions.Autofac.DependencyInjection" Version="5.3.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.7" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
   </ItemGroup>
 
