--- a/src/PL.API/PL.API.csproj
+++ b/src/PL.API/PL.API.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -12,11 +12,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Authorization\" />
+    <ProjectReference Include="..\..\PL.Authorization.Infrastructure\PL.Authorization.Infrastructure.csproj" />
   </ItemGroup>
 
 
