--- a/src/BuildingBlocks/PL.BuildingBlocks.Infrastructure/PL.BuildingBlocks.Infrastructure.csproj
+++ b/src/BuildingBlocks/PL.BuildingBlocks.Infrastructure/PL.BuildingBlocks.Infrastructure.csproj
@@ -9,6 +9,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="Microsoft.Data.SqlClient">
+      <HintPath>..\..\..\..\..\..\Users\Łukasz\.nuget\packages\microsoft.data.sqlclient\1.1.3\ref\netcoreapp2.1\Microsoft.Data.SqlClient.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.EntityFrameworkCore">
       <HintPath>..\..\..\..\..\..\Users\Łukasz\.nuget\packages\microsoft.entityframeworkcore\3.1.7\lib\netstandard2.0\Microsoft.EntityFrameworkCore.dll</HintPath>
     </Reference>
