--- a/src/Authorization/PL.Authorization.Infrastructure/PL.Authorization.Infrastructure.csproj
+++ b/src/Authorization/PL.Authorization.Infrastructure/PL.Authorization.Infrastructure.csproj
@@ -5,9 +5,6 @@
     <GenerateRuntimeConfigurationFiles>True</GenerateRuntimeConfigurationFiles>
   </PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\src\Authorization\PL.Authorization\PL.Authorization.Application.csproj" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
@@ -19,6 +16,12 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.7" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\BuildingBlocks\PL.BuildingBlocks.Application\PL.BuildingBlocks.Application.csproj" />
+    <ProjectReference Include="..\PL.Authorization.Application\PL.Authorization.Application.csproj" />
   </ItemGroup>
 
 </Project>
