--- a/src/BuildingBlocks/PL.BuildingBlocks.Infrastructure/PL.BuildingBlocks.Infrastructure.csproj
+++ b/src/BuildingBlocks/PL.BuildingBlocks.Infrastructure/PL.BuildingBlocks.Infrastructure.csproj
@@ -5,19 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\PL.BuildingBlocks.Application\PL.BuildingBlocks.Application.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="Microsoft.Data.SqlClient">
-      <HintPath>..\..\..\..\..\..\Users\Łukasz\.nuget\packages\microsoft.data.sqlclient\1.1.3\ref\netcoreapp2.1\Microsoft.Data.SqlClient.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.EntityFrameworkCore">
-      <HintPath>..\..\..\..\..\..\Users\Łukasz\.nuget\packages\microsoft.entityframeworkcore\3.1.7\lib\netstandard2.0\Microsoft.EntityFrameworkCore.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
-      <HintPath>..\..\..\..\..\..\Program Files\dotnet\packs\Microsoft.AspNetCore.App.Ref\3.1.3\ref\netcoreapp3.1\Microsoft.Extensions.DependencyInjection.Abstractions.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\PL.BuildingBlocks.Application\PL.BuildingBlocks.Application.csproj" />
   </ItemGroup>
 
 </Project>
