--- a/src/PL.API/PL.API.csproj
+++ b/src/PL.API/PL.API.csproj
@@ -19,7 +19,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\PL.Authorization.Infrastructure\PL.Authorization.Infrastructure.csproj" />
+    <ProjectReference Include="..\Authorization\PL.Authorization.Application\PL.Authorization.Application.csproj" />
+    <ProjectReference Include="..\Authorization\PL.Authorization.Infrastructure\PL.Authorization.Infrastructure.csproj" />
   </ItemGroup>
 
 
