--- a/src/BuildingBlocks/PL.BuildingBlocks.Infrastructure/PL.BuildingBlocks.Infrastructure.csproj
+++ b/src/BuildingBlocks/PL.BuildingBlocks.Infrastructure/PL.BuildingBlocks.Infrastructure.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="2.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\PL.BuildingBlocks.Application\PL.BuildingBlocks.Application.csproj" />
   </ItemGroup>
 
