--- a/src/Authorization/PL.Authorization.Infrastructure/PL.Authorization.Infrastructure.csproj
+++ b/src/Authorization/PL.Authorization.Infrastructure/PL.Authorization.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\BuildingBlocks\PL.BuildingBlocks.Application\PL.BuildingBlocks.Application.csproj" />
+    <ProjectReference Include="..\..\BuildingBlocks\PL.BuildingBlocks.Infrastructure\PL.BuildingBlocks.Infrastructure.csproj" />
     <ProjectReference Include="..\PL.Authorization.Application\PL.Authorization.Application.csproj" />
   </ItemGroup>
 
