--- a/src/BuildingBlocks/PL.BuildingBlocks.Infrastructure/PL.BuildingBlocks.Infrastructure.csproj
+++ b/src/BuildingBlocks/PL.BuildingBlocks.Infrastructure/PL.BuildingBlocks.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="2.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.7" />
   </ItemGroup>
 
   <ItemGroup>
